[refactor] 미리 서명된 URL 발급 API 및 업로드 확인 API #276